--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GENDASH PRO | L'Art du Chiffre</title>
     
+    <!-- MODIF: Favicons -->
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="apple.png">
+    <!-- END MODIF -->
+
     <!-- Core -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -227,6 +233,51 @@
         const CheckCircle = () => <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="1.5" className="text-white"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>;
         const GoogleIcon = () => <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M12.48 10.92v3.28h7.84c-.24 1.84-.853 3.187-1.787 4.133-1.147 1.147-2.933 2.4-6.053 2.4-4.827 0-8.6-3.893-8.6-8.72s3.773-8.72 8.6-8.72c2.6 0 4.507 1.027 5.907 2.347l2.307-2.307C18.747 1.44 16.133 0 12.48 0 5.867 0 .307 5.387.307 12s5.56 12 12.173 12c3.573 0 6.267-1.173 8.373-3.36 2.16-2.16 2.84-5.213 2.84-7.667 0-.76-.053-1.467-.173-2.053H12.48z"/></svg>;
         const LogOutIcon = () => <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>;
+
+        // --- MODIF: Captcha Logic ---
+        const CaptchaModal = ({ onVerified }) => {
+            const [sequence, setSequence] = useState([]);
+            const targetSequence = [1, 2, 3];
+
+            const handleTileClick = (num) => {
+                const newSeq = [...sequence, num];
+                if (newSeq[newSeq.length - 1] !== targetSequence[newSeq.length - 1]) {
+                    setSequence([]);
+                    return;
+                }
+                if (newSeq.length === 3) {
+                    localStorage.setItem("human_verified", "1");
+                    console.log("[captcha] Verified successfully.");
+                    onVerified();
+                } else {
+                    setSequence(newSeq);
+                }
+            };
+
+            return (
+                <div className="fixed inset-0 z-[999] flex items-center justify-center bg-black/95 backdrop-blur-xl">
+                    <div className="max-w-md w-full p-10 border border-white/10 bg-zinc-900/50 rounded-3xl text-center">
+                        <h2 className="text-2xl font-display font-bold uppercase tracking-tighter mb-4 text-white">Vérification de sécurité</h2>
+                        <p className="text-zinc-500 text-xs uppercase tracking-widest mb-8">Cliquez sur les jetons dans l'ordre (1, 2, 3)</p>
+                        <div className="flex justify-center gap-6 mb-8">
+                            {[2, 1, 3].map((n) => (
+                                <button
+                                    key={n}
+                                    onClick={() => handleTileClick(n)}
+                                    className={`w-16 h-16 rounded-full border-2 flex items-center justify-center font-display font-bold text-xl transition-all duration-300 ${
+                                        sequence.includes(n) ? 'bg-white text-black border-white' : 'border-white/20 text-white hover:border-white'
+                                    }`}
+                                >
+                                    {n}
+                                </button>
+                            ))}
+                        </div>
+                        <p className="text-[10px] text-zinc-600 uppercase tracking-widest italic">Preuve d'humanité requise pour accéder à l'arsenal.</p>
+                    </div>
+                </div>
+            );
+        };
+        // --- END MODIF ---
 
         // --- DATA WITH CREDIBLE RATINGS ---
         
@@ -477,7 +528,7 @@
             };
 
             return (
-                <section className="py-32 bg-[#050505] z-10 relative border-t border-white/5">
+                <section id="reviews" className="py-32 bg-[#050505] z-10 relative border-t border-white/5">
                     <div className="max-w-7xl mx-auto px-4">
                         <Reveal>
                             <div className="flex flex-col md:flex-row justify-between items-end mb-16 gap-6">
@@ -530,6 +581,8 @@
         // --- MAIN APP ---
         const App = () => {
             const [user, setUser] = useState(null);
+            // MODIF: Captcha memory
+            const [isVerified, setIsVerified] = useState(localStorage.getItem("human_verified") === "1");
 
             useEffect(() => {
                 // S'abonner aux changements d'auth
@@ -539,6 +592,8 @@
                         console.log("Utilisateur connecté:", u);
                     });
                 }
+                // Initial log
+                if (!isVerified) console.log("[captcha] User not verified yet.");
             }, []);
 
             const handleBuy = () => window.location.href = "https://checkout.revolut.com/pay/74e7f128-2822-47e9-904f-845911a86af9";
@@ -580,6 +635,10 @@
 
             return (
                 <div className="relative min-h-screen bg-black text-white selection:bg-white selection:text-black">
+                    {/* MODIF: Captcha Block */}
+                    {!isVerified && <CaptchaModal onVerified={() => setIsVerified(true)} />}
+                    {/* END MODIF */}
+
                     <CustomCursor />
                     <div className="fixed inset-0 bg-noise pointer-events-none z-0 mix-blend-overlay opacity-20"></div>
 
@@ -688,22 +747,6 @@
                         </div>
                     </section>
 
-                    {/* REVIEWS SECTION WITH MODAL */}
-                    <ReviewsSection />
-
-                    {/* FAQ */}
-                    <section className="py-32 px-4 max-w-3xl mx-auto z-10 relative">
-                        <Reveal>
-                            <h2 className="text-center text-xs font-bold tracking-[0.3em] uppercase text-zinc-500 mb-20">Black Book (FAQ)</h2>
-                        </Reveal>
-                        <div className="space-y-2">
-                            <FAQItem question="Paiement unique vraiment ?" answer="Oui. 249€ une fois. Zéro abonnement mensuel. Vous économisez 480€/an par rapport aux concurrents." />
-                            <FAQItem question="Comment je reçois les fichiers ?" answer="Livraison instantanée par email après le paiement. Vous recevez un pack .zip contenant tous les templates et le code source." />
-                            <FAQItem question="Faut-il savoir coder ?" answer="Non. Ouvrez le fichier .html, cliquez sur les chiffres, éditez. C'est aussi simple que d'écrire un email. Un guide vidéo est inclus." />
-                            <FAQItem question="Est-ce compatible Mobile ?" answer="Oui. Les dashboards sont 'Responsive'. Vous pouvez les afficher sur votre téléphone pour vous filmer." />
-                        </div>
-                    </section>
-
                     {/* PRICING (COMPACT) */}
                     <section id="pricing" className="py-24 flex justify-center px-4 relative z-10">
                         <div className="absolute inset-0 bg-white/5 skew-y-3 transform origin-top-left -z-10"></div>
@@ -733,7 +776,23 @@
                         </div>
                     </section>
 
-                    {/* NEW FOOTER */}
+                    {/* FAQ */}
+                    <section id="faq" className="py-32 px-4 max-w-3xl mx-auto z-10 relative">
+                        <Reveal>
+                            <h2 className="text-center text-xs font-bold tracking-[0.3em] uppercase text-zinc-500 mb-20">Black Book (FAQ)</h2>
+                        </Reveal>
+                        <div className="space-y-2">
+                            <FAQItem question="Paiement unique vraiment ?" answer="Oui. 249€ une fois. Zéro abonnement mensuel. Vous économisez 480€/an par rapport aux concurrents." />
+                            <FAQItem question="Comment je reçois les fichiers ?" answer="Livraison instantanée par email après le paiement. Vous recevez un pack .zip contenant tous les templates et le code source." />
+                            <FAQItem question="Faut-il savoir coder ?" answer="Non. Ouvrez le fichier .html, cliquez sur les chiffres, éditez. C'est aussi simple que d'écrire un email. Un guide vidéo est inclus." />
+                            <FAQItem question="Est-ce compatible Mobile ?" answer="Oui. Les dashboards sont 'Responsive'. Vous pouvez les afficher sur votre téléphone pour vous filmer." />
+                        </div>
+                    </section>
+
+                    {/* REVIEWS SECTION WITH MODAL */}
+                    <ReviewsSection />
+
+                    {/* MODIF: Footer at absolute bottom */}
                     <footer className="py-20 px-6 border-t border-white/10 bg-[#020202] z-10 relative">
                         <div className="max-w-7xl mx-auto flex flex-col md:flex-row justify-between gap-12">
                             <div className="flex flex-col gap-6 max-w-xs">
@@ -772,6 +831,7 @@
                             </div>
                         </div>
                     </footer>
+                    {/* END MODIF */}
                 </div>
             );
         };
