--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                                 <div className="flex flex-col gap-4">
                                     <h3 className="text-xs font-bold uppercase tracking-widest text-white mb-2">Société</h3>
                                     <a href="pdg.html" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">PDG</a>
-                                    <a href="#" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">Support</a>
+                                    <a href="support.html" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">Support</a>
                                 </div>
                             </div>
                         </div>
