--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 </button>
                             ))}
                         </div>
-                        <p className="text-[10px] text-zinc-600 uppercase tracking-widest italic">Preuve d'humanité requise pour accéder à l'arsenal.</p>
+                        <p className="text-[10px] text-zinc-600 uppercase tracking-widest italic">Preuve d'humanité requise.</p>
                     </div>
                 </div>
             );
