--- a/cgv.html
+++ b/cgv.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GENDASH PRO | CGV</title>
+
+    <link rel="icon" href="favicon.ico" sizes="any">
+<link rel="icon" href="favicon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="apple.png">
+
     
     <!-- Core -->
     <script src="https://cdn.tailwindcss.com"></script>
