--- a/index.html
+++ b/index.html
@@ -579,6 +579,131 @@
         };
 
         // --- MAIN APP ---
+        // --- VIDEO SCROLL SECTION ---
+        // Source of the cinematic loop (local file)
+        const VIDEO_SRC = "produit.mp4";
+
+        /**
+         * VideoScrollSection
+         * A cinematic full-screen video section that appears between pricing and FAQ.
+         * The section uses a scroll-based animation: fade/translate/scale/blur on enter/exit,
+         * and holds steady in the middle. The video plays automatically when the section
+         * becomes visible and resets when re-entered. Pointer events are disabled on the
+         * video and its container to prevent user interaction.
+         */
+        const VideoScrollSection = () => {
+            const sectionRef = useRef(null);
+            const videoRef = useRef(null);
+            const [progress, setProgress] = useState(0);
+            const triggerRef = useRef(false);
+            const [reduceMotion, setReduceMotion] = useState(false);
+
+            // Respect user prefers-reduced-motion
+            useEffect(() => {
+                if (typeof window !== 'undefined' && window.matchMedia) {
+                    setReduceMotion(window.matchMedia('(prefers-reduced-motion: reduce)').matches);
+                }
+            }, []);
+
+            // Update progress based on scroll position
+            useEffect(() => {
+                const updateProgress = () => {
+                    if (!sectionRef.current) return;
+                    const rect = sectionRef.current.getBoundingClientRect();
+                    const height = rect.height || 1;
+                    // compute progress: 0 when section bottom is below viewport, 1 when section top is above viewport
+                    const p = Math.min(Math.max((window.innerHeight - rect.top) / height, 0), 1);
+                    setProgress(p);
+                };
+                updateProgress();
+                window.addEventListener('scroll', updateProgress, { passive: true });
+                window.addEventListener('resize', updateProgress);
+                return () => {
+                    window.removeEventListener('scroll', updateProgress);
+                    window.removeEventListener('resize', updateProgress);
+                };
+            }, []);
+
+            // Start or reset video when entering section
+            useEffect(() => {
+                const vid = videoRef.current;
+                if (!vid) return;
+                if (progress > 0.05 && !triggerRef.current) {
+                    triggerRef.current = true;
+                    try {
+                        vid.currentTime = 0;
+                        const playPromise = vid.play();
+                        if (playPromise && playPromise.catch) {
+                            playPromise.catch(() => { /* ignore autoplay errors */ });
+                        }
+                    } catch (e) {
+                        // ignore
+                    }
+                }
+                if (progress <= 0.05) {
+                    triggerRef.current = false;
+                }
+            }, [progress]);
+
+            // Easing function
+            const easeOutCubic = (x) => 1 - Math.pow(1 - x, 3);
+
+            // Compute styles for animation without parallax translation or scaling.
+            let opacity = 0;
+            let blur = 10;
+            if (reduceMotion) {
+                // Simple fade for reduced motion users
+                if (progress < 0.1) {
+                    opacity = progress / 0.1;
+                } else if (progress > 0.9) {
+                    opacity = 1 - (progress - 0.9) / 0.1;
+                } else {
+                    opacity = 1;
+                }
+                blur = 0;
+            } else {
+                if (progress < 0.2) {
+                    const t = easeOutCubic(progress / 0.2);
+                    opacity = t;
+                    blur = (1 - t) * 10;
+                } else if (progress > 0.8) {
+                    const t = easeOutCubic((progress - 0.8) / 0.2);
+                    opacity = 1 - t;
+                    blur = t * 10;
+                } else {
+                    opacity = 1;
+                    blur = 0;
+                }
+            }
+            const style = {
+                opacity,
+                transform: `translate3d(0, 0px, 0) scale(1)`,
+                filter: `blur(${blur}px)`,
+            };
+
+            return (
+                <section ref={sectionRef} id="video-section" className="relative w-full h-[200vh]">
+                    <div className="sticky top-0 h-screen flex items-center justify-center">
+                        <div className="w-full max-w-6xl px-4 md:px-8" style={style}>
+                            <div className="relative">
+                                <video
+                                    ref={videoRef}
+                                    src={VIDEO_SRC}
+                                    loop
+                                    muted
+                                    playsInline
+                                    preload="auto"
+                                    className="w-full h-full object-cover rounded-3xl border border-white/10 shadow-2xl pointer-events-none"
+                                />
+                                <div className="absolute inset-0 rounded-3xl bg-gradient-to-b from-black/50 via-black/20 to-transparent pointer-events-none"></div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            );
+        };
+        // --- END VIDEO SCROLL SECTION ---
+
         const App = () => {
             const [user, setUser] = useState(null);
             // MODIF: Captcha memory
@@ -776,6 +901,8 @@
                         </div>
                     </section>
 
+                    {/* VIDEO CINÉMATIQUE */}
+                    <VideoScrollSection />
                     {/* FAQ */}
                     <section id="faq" className="py-32 px-4 max-w-3xl mx-auto z-10 relative">
                         <Reveal>
