--- a/blog.html
+++ b/blog.html
@@ -239,7 +239,7 @@
                             </div>
                             <div className="flex gap-6 text-sm text-zinc-500">
                                 <a href="https://gendash.fr" className="hover:text-white transition-colors">Générateur</a>
-                                <a href="mentionslegales.html" className="hover:text-white transition-colors">Mentions Légales</a>
+                                <a href="mentions-legales.html" className="hover:text-white transition-colors">Mentions Légales</a>
                                 <a href="support.html" className="hover:text-white transition-colors">Support</a>
                             </div>
                         </div>
