--- a/blog5.html
+++ b/blog5.html
@@ -214,7 +214,7 @@
                         
                         <div className="flex flex-col gap-4">
                             <h3 className="text-xs font-bold uppercase tracking-widest text-white mb-2">Légal</h3>
-                            <a href="mentionslegales.html" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">Mentions Légales</a>
+                            <a href="mentions-legales.html" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">Mentions Légales</a>
                             <a href="confidentialite.html" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">Confidentialité</a>
                             <a href="cgv.html" className="text-zinc-500 hover:text-white transition-colors text-sm hover-trigger cursor-pointer">CGV</a>
                         </div>
